--- a/Module2/ManageProfile.css
+++ b/Module2/ManageProfile.css
@@ -47,6 +47,12 @@
     text-align: center;
   }
   
+  .table-and-buttons {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
   .float-button {
     margin-top: 50px;
     margin-left: 50px;
