--- a/module1/Admin/Assets/styles.css
+++ b/module1/Admin/Assets/styles.css
@@ -6,7 +6,7 @@
   body, html {
     height: 100%;
     line-height: 1.8;
-    background-color: #D6D1B3;
+    background-color: #00ada5;
   } 
 
 /* Full height image header */
@@ -85,7 +85,7 @@
     z-index: 1;
     top: 66px;
     left: 0;
-    background-color: #CDAC79;
+    background-color: #007973;
     overflow-x: hidden;
     padding-top: 16px;
   }
@@ -94,7 +94,7 @@
     padding: 6px 8px 6px 16px;
     text-decoration: none;
     font-size: 20px;
-    color: black;
+    color: white;
     display: block;
   }
   
@@ -106,6 +106,7 @@
     margin-left: 260px; /* Same as the width of the sidenav */
     padding: 0px 10px;
     padding-top: 66px;
+
   }
   
   @media screen and (max-height: 450px) {
@@ -159,7 +160,7 @@
   body, html {
     height: 100%;
     line-height: 1.8;
-    background-color: #D6D1B3;
+    background-color: #00ada5;
   } 
 
 /* Full height image header */
