--- a/module1/Expert/Assets/styles.css
+++ b/module1/Expert/Assets/styles.css
@@ -6,7 +6,7 @@
   body, html {
     height: 100%;
     line-height: 1.8;
-    background-color: #00ada5;
+    background-color: #D6D1B3;
   } 
 
 /* Full height image header */
@@ -85,7 +85,7 @@
     z-index: 1;
     top: 66px;
     left: 0;
-    background-color: #007973;
+    background-color: #CDAC79;
     overflow-x: hidden;
     padding-top: 16px;
   }
@@ -104,7 +104,7 @@
   
   .main {
     margin-left: 260px; /* Same as the width of the sidenav */
-    padding: 20px 10px;
+    padding: 0px 10px;
     padding-top: 66px;
   }
   
